# BingKits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
Include/BKits/: Base.h  Common-inl.h  Error.h  Version.h
Include/BKits/base/: buffer.h  string_view.h
Include/BKits/os/: utils.h
Include/BKits/utils/: SqliteDB.h  SqliteStmt.h
examples/: copyfloader.cc
include/BKits/: Common-inl.h  Common.h  Error.h  Version.h
include/BKits/base/: string_view.h  timer.h
include/BKits/utils/: SqliteDB.h  SqliteStmt.h  SqliteTransaction.h
